--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       rel="stylesheet"
       href="//cdn.materialdesignicons.com/3.9.97/css/materialdesignicons.min.css"
     />
+    <link rel="stylesheet" href="/assets/css/iziToast.min.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
